deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joossam-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  # TLS 설정
  tls:
  - hosts:
    - joossameng.kro.kr
    - www.joossameng.kro.kr
    secretName: joossam-tls
  rules:
    - host: joossameng.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joossam-service
                port:
                  number: 80
    - host: www.joossameng.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joossam-service
                port:
                  number: 80
